<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MethodActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/methodTitleText"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:drawableBottom="@drawable/ic_mic"
                android:background="#00000000"
                android:text="@string/methodHandSpeechButton"
                android:onClick="methodHandSpeechClick"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:drawableBottom="@drawable/ic_keyboard"
                android:background="#00000000"
                android:text="@string/methodHandButton"
                android:onClick="methodHandClick"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:drawableBottom="@drawable/ic_hearing"
                android:background="#00000000"
                android:text="@string/methodSpeechButton"
                android:onClick="methodSpeechClick"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:drawableBottom="@drawable/ic_transform"
                android:background="#00000000"
                android:text="@string/methodKeyWordButton"
                android:onClick="methodKeyWordClick"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
